--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.7.8",
     "vue": "^3.4.34",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vue3-puzzle-vcode": "^1.1.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.0",
